--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -3,13 +3,29 @@
 @tailwind utilities;
 
 .app-button {
-    @apply text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center;
+    @apply font-mono text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center;
 }
 
 .app-button.red {
-    @apply bg-red-600 hover:bg-red-700 focus:ring-red-300;
+    @apply font-mono bg-red-600 hover:bg-red-700 focus:ring-red-300;
 }
 
 .current-page {
-    @apply text-white bg-blue-500 md:bg-transparent md:text-blue-500;
+    @apply font-mono md:bg-transparent md:text-[#B3BA1E];
+}
+
+.input-gray {
+    @apply font-mono text-gray-500 mt-5 p-3 w-full border-2  border-gray-300 bg-gray-100 rounded-lg;
+}
+
+.button-gray {
+    @apply font-mono text-gray-600 text-lg mb-10 px-10 py-3 rounded-xl bg-gray-300 hover:bg-gray-400;
+}
+
+.label-gray {
+    @apply font-mono text-lg text-gray-600;
+}
+
+.header-gray {
+    @apply font-mono text-3xl text-gray-700 text-center my-8;
 }
