--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -29,3 +29,7 @@
 .header-gray {
     @apply font-mono text-3xl text-gray-700 text-center my-8;
 }
+
+.process-box {
+    @apply border-2 text-xs font-medium inline-flex items-center rounded mr-2
+}
