--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1196,6 +1196,9 @@ input:checked + .toggle-bg {
   white-space: nowrap;
   border-width: 0;
 }
+.pointer-events-none {
+  pointer-events: none;
+}
 .visible {
   visibility: visible;
 }
@@ -1220,6 +1223,10 @@ input:checked + .toggle-bg {
   bottom: 0px;
   left: 0px;
 }
+.inset-y-0 {
+  top: 0px;
+  bottom: 0px;
+}
 .bottom-0 {
   bottom: 0px;
 }
@@ -1228,6 +1235,18 @@ input:checked + .toggle-bg {
 }
 .right-0 {
   right: 0px;
+}
+.right-2\.5 {
+  right: 0.625rem;
+}
+.bottom-2\.5 {
+  bottom: 0.625rem;
+}
+.right-2 {
+  right: 0.5rem;
+}
+.bottom-2 {
+  bottom: 0.5rem;
 }
 .top-0 {
   top: 0px;
@@ -1769,13 +1788,13 @@ input:checked + .toggle-bg {
   --tw-bg-opacity: 1;
   background-color: rgb(0 108 103 / var(--tw-bg-opacity));
 }
+.bg-\[\#B3BA1E\] {
+  --tw-bg-opacity: 1;
+  background-color: rgb(179 186 30 / var(--tw-bg-opacity));
+}
 .bg-gray-800 {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity));
-}
-.bg-green-100 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(222 247 236 / var(--tw-bg-opacity));
 }
 .bg-blue-700 {
   --tw-bg-opacity: 1;
@@ -1819,12 +1838,6 @@ input:checked + .toggle-bg {
 }
 .p-3 {
   padding: 0.75rem;
-}
-.p-8 {
-  padding: 2rem;
-}
-.p-10 {
-  padding: 2.5rem;
 }
 .px-4 {
   padding-left: 1rem;
@@ -1902,30 +1915,6 @@ input:checked + .toggle-bg {
   padding-left: 2.5rem;
   padding-right: 2.5rem;
 }
-.px-1\.5 {
-  padding-left: 0.375rem;
-  padding-right: 0.375rem;
-}
-.px-0\.5 {
-  padding-left: 0.125rem;
-  padding-right: 0.125rem;
-}
-.px-0 {
-  padding-left: 0px;
-  padding-right: 0px;
-}
-.py-9 {
-  padding-top: 2.25rem;
-  padding-bottom: 2.25rem;
-}
-.px-3\.5 {
-  padding-left: 0.875rem;
-  padding-right: 0.875rem;
-}
-.py-5 {
-  padding-top: 1.25rem;
-  padding-bottom: 1.25rem;
-}
 .pt-2 {
   padding-top: 0.5rem;
 }
@@ -1955,6 +1944,9 @@ input:checked + .toggle-bg {
 }
 .pl-8 {
   padding-left: 2rem;
+}
+.pl-10 {
+  padding-left: 2.5rem;
 }
 .pt-6 {
   padding-top: 1.5rem;
@@ -2116,14 +2108,6 @@ input:checked + .toggle-bg {
 .text-gray-300 {
   --tw-text-opacity: 1;
   color: rgb(209 213 219 / var(--tw-text-opacity));
-}
-.text-yellow-300 {
-  --tw-text-opacity: 1;
-  color: rgb(250 202 21 / var(--tw-text-opacity));
-}
-.text-red-300 {
-  --tw-text-opacity: 1;
-  color: rgb(248 180 180 / var(--tw-text-opacity));
 }
 .underline {
   -webkit-text-decoration-line: underline;
@@ -2350,17 +2334,6 @@ input:checked + .toggle-bg {
   color: rgb(55 65 81 / var(--tw-text-opacity));
 }
 
-.process-box {
-  margin-right: 0.5rem;
-  display: inline-flex;
-  align-items: center;
-  border-radius: 0.25rem;
-  border-width: 2px;
-  font-size: 0.75rem;
-  line-height: 1rem;
-  font-weight: 500;
-}
-
 .hover\:border-gray-300:hover {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
@@ -2384,6 +2357,11 @@ input:checked + .toggle-bg {
 .hover\:bg-blue-100:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(225 239 254 / var(--tw-bg-opacity));
+}
+
+.hover\:bg-\[\#aeb347\]:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(174 179 71 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-\[\#B3BA1E\]:hover {
@@ -2909,3 +2887,4 @@ input:checked + .toggle-bg {
     padding-right: 2rem;
   }
 }
+
